src/nationalarchives/utilities/tables/_index.scss
@use "sass:math";
@use "sass:selector";
@use "../../variables/a11y" as a11yVariables;
@use "../../tools/a11y";
@use "../../tools/colour";
@use "../../tools/grid";
@use "../../tools/media";
@use "../../tools/spacing";
@use "../../tools/typography";

$table-overflow-shadow-width: 1.5rem;

@property --left-shadow {
  syntax: "<color>";
  inherits: false;
  initial-value: rgb(0 0 0 / 0%);
}

@property --right-shadow {
  syntax: "<color>";
  inherits: false;
  initial-value: rgb(0 0 0 / 0%);
}

@keyframes scrollfade {
  0% {
    --left-shadow: rgb(0 0 0 / 0%);
    --right-shadow: rgb(0 0 0 / 40%);
  }

  10% {
    --left-shadow: rgb(0 0 0 / 40%);
  }

  90% {
    --right-shadow: rgb(0 0 0 / 40%);
  }

  100% {
    --right-shadow: rgb(0 0 0 / 0%);
    --left-shadow: rgb(0 0 0 / 40%);
  }
}

.tna-table {
  @include spacing.space-above;
  max-width: 100%;
  margin-bottom: spacing.space(4);

  position: relative;
  z-index: 1;

  text-align: left;

  border-collapse: collapse;

  &:last-child {
    margin-bottom: 0;
  }

  &__caption {
    width: 100%;
    padding: spacing.space(1) 0 0;

    caption-side: bottom;

    @include typography.font-size(16);
  }

  &__head {
    vertical-align: bottom;
  }

  &__body {
    vertical-align: top;
  }

  &__foot {
    @include typography.main-font-weight-bold;
    vertical-align: top;
  }

  &__row {
  }

  &__header {
  }

  &__cell {
  }

  &__header,
  &__cell {
    padding: spacing.space(0.25) spacing.space(1);

    @include colour.colour-border("keyline", 1px, solid, bottom);

    &:first-child {
      padding-left: 0;
    }

    &:last-child {
      padding-right: 0;
    }

    &--numeric {
      text-align: right;
    }

    &--align-left {
      text-align: left;
    }

    &--align-centre {
      text-align: center;
    }

    &--align-right {
      text-align: right;
    }

    &--align-justify {
      text-align: justify;
    }

    &--align-top {
      vertical-align: top;
    }

    &--align-middle {
      vertical-align: middle;
    }

    &--align-bottom {
      vertical-align: bottom;
    }
  }

  &__head &__header {
    @include colour.thick-keyline-dark(bottom);
  }

  &__foot &__header,
  &__foot &__cell {
    @include colour.thick-keyline-dark(top);
  }

  p {
    + p {
      margin-top: spacing.space(0.25);
    }
  }

  &--full {
    width: 100%;
  }
}

.tna-table-wrapper {
  @include spacing.space-above;
  margin-bottom: spacing.space(4);

  overflow: auto;

  background:
    radial-gradient(
      ellipse #{$table-overflow-shadow-width} 50% at left center,
      var(--left-shadow),
      rgb(0 0 0 / 0%)
    ),
    radial-gradient(
        ellipse #{$table-overflow-shadow-width} 50% at right center,
        var(--right-shadow),
        rgb(0 0 0 / 0%)
      )
      transparent;

  border-radius: 0.1px;

  container-type: inline-size;

  animation: scrollfade ease-out;
  animation-timeline: --scrollfade;
  scroll-timeline: --scrollfade x;

  &:last-child {
    margin-bottom: 0;
  }

  &:focus-visible {
    @include a11y.focus-outline;
  }

  .tna-table {
    &__caption {
      max-width: calc(100vw - #{grid.gutter-width-double()});
      max-width: 100cqw;

      position: sticky;
      left: 0;

      @include media.on-tiny {
        max-width: calc(100vw - #{grid.gutter-width-tiny-double()});
        max-width: 100cqw;
      }
    }
  }

  &--sticky-first-column {
    .tna-table {
      &__header,
      &__cell {
        &:first-child {
          max-width: 50vw;
          max-width: 50cqw;

          position: sticky;
          left: 0;
          z-index: 1;

          overflow-wrap: break-word;

          hyphens: auto;
          @include colour.colour-background("background");

          &::after {
            content: "";

            width: 0.75rem;

            position: absolute;
            top: 0;
            bottom: -1px;
            left: 100%;

            background: linear-gradient(
              90deg,
              var(--left-shadow) 0%,
              rgb(0 0 0 / 0%) 100%
            );
            animation: scrollfade ease-out;
            animation-timeline: --scrollfade;
          }
        }
      }
    }
  }

  &--scroll {
    .tna-table {
      &__caption {
        &::after {
          content: " (scroll to see more)";
        }
      }
    }
  }
}

